fixed scrollbar in firefox

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,10 +1,16 @@
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
-body {
-  background-color: darkblue;
+/* The emerging W3C standard that is currently Firefox-only */
+* {
+  scrollbar-width: none;
+  scrollbar-color: transparent transparent;
 }
-body::-webkit-scrollbar {
+/* Works on Chrome/Edge/Safari */
+*::-webkit-scrollbar {
   width: 0px;
   background: transparent;
+}
+body {
+  background-color: darkblue;
 }
 #link_button{
   padding-right: 23px;
